--- a/Jellyfish/index.html
+++ b/Jellyfish/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Image Distortion using PaperJS</title>
-		<meta name="description" content="Image Distortion Mesh using PaperJS: Image distortion effect with triangulated mesh with PaperJS" />
+		<title>Jellyfish using PaperJS</title>
+		<meta name="description" content="Jellyfish using PaperJS" />
 		<meta name="keywords" content="image distortion, triangulation, canvas, paperjs, mesh, html5" />
 		<meta name="author" content="Alaa Alnuaimi - minus99.com" />
 		<script type="text/javascript" src="dist/jquery.js"></script>
