--- a/letters/index.html
+++ b/letters/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Lacoste</title>
+<title>Letters</title>
 <script type="text/javascript" src="dist/jquery.js"></script>
 <script type="text/javascript" src="dist/paper-full.min.js"></script>
 <script type="text/javascript" src="dist/TweenMax.min.js"></script>
