--- a/Jellyfish/index.html
+++ b/Jellyfish/index.html
@@ -2,34 +2,31 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Jellyfish using PaperJS</title>
 		<meta name="description" content="Jellyfish using PaperJS" />
 		<meta name="keywords" content="image distortion, triangulation, canvas, paperjs, mesh, html5" />
 		<meta name="author" content="Alaa Alnuaimi - minus99.com" />
 		<script type="text/javascript" src="dist/jquery.js"></script>
 		<script type="text/javascript" src="dist/paper-full.min.js"></script>
-		
+
 		<style>
 		html, body{ margin: 0; font-family: arial; overflow: hidden; background: linear-gradient(45deg, blue, mediumblue); }
-		.adjustment{ position: fixed; top: 0; right: 0; width: 140px; background:#666; display: none;}
-		.adjustment div{ border-bottom: 1px solid #555; border-top: 1px solid #777; padding:10px 15px; }
-		label{ font-size: 11px; color: #ddd; }
-		input, select, button{ width: 100%; }
-		h4{ color: #ddd; padding:10px 15px;  background:#555; margin: 0; font-weight: normal; }
 		small{ position: fixed; left: 20px; bottom: 20px; font-size: 12px; }
-		
+		a.github{ transition: all .5s ease-out; position: fixed; right: 20px; bottom: 50px; display: block; background: #f5f5f5; height: 20px; line-height: 20px; color: #333; width: 100px; border-radius: 5px; box-shadow: 1px 1px 3px rgba(0,0,0,.1); font-size: 13px; font-family: arial; text-decoration:none; padding:5px 8px; }
+		a.github svg{ vertical-align: bottom; }
+		a.github:hover{ box-shadow: 3px 6px 5px rgba(0,0,0,0.1); background: #fff; }
 		</style>
-		
+
 		<script type="text/javascript">
 		var	paperscript = {},
 			args = {}
-			
+
 			$(document).ready(function(){
 				$(":input:not(button)").change(function(){ updateVariables($(this)); });
 			});
-			
+
 		function updateVariables(){
 			args.radius = $("#radius input").val() * 4,
 			args.thickness = Math.round($("#thickness input").val() * .1);
@@ -37,14 +34,14 @@
 			args.hue = Math.round($("#hue input").val() / 100 * 360);
 			args.hue_shift = Math.round($("#hue_shift input").val() / 100 * 360);
 			args.debug = ($("#debug select").val() === "true");
-			
+
 			console.log(args);
-				
+
 			$(":input:not(button)").each(function(){
 				$(this).siblings("label").children("b").text( args[$(this).parent("div").attr("id")] );
 			});
-			
-			paperscript.strings.init(args);	
+
+			paperscript.strings.init(args);
 			paperscript.v.play();
 		}
 		</script>
@@ -52,21 +49,13 @@
 	</head>
 	<body>
 		<canvas id="stage" resize="true" stats hidpi="on"></canvas>
-		<div class="adjustment">
-			<h4>Adjustment</h4>
-			<div id="radius"><label>Radius: <b></b></label><input type="range" value="20"></div>
-			<div id="thickness"><label>String Thickness: <b></b></label><input type="range" value="10"></div>
-			<div id="shift"><label>Intensity: <b></b></label><input type="range" value="30"></div>
-			<div id="hue"><label>Color Hue: <b></b></label><input type="range" value="85"></div>
-			<div id="hue_shift"><label>Color Hue Shift: <b></b></label><input type="range" value="30"></div>
-			<div id="debug"><label>Debug: </label>
-				<select>
-					<option value="false">Normal Mode</option>
-					<option value="true">Debug Mode</option>
-				</select>
-			</div>
-			
-		</div>
+
 		<small>Don't watch it too much! it hurts (:</small>
+
+		<a class="github" href="https://github.com/alacaesar/alacaesar.github.io/tree/master/Jellyfish">
+			<svg aria-hidden="true" class="octicon octicon-mark-github" height="20" version="1.1" viewBox="0 0 16 16" width="20"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg>
+			View source
+		</a>
+
 	</body>
 </html>
