--- a/blossom/index.html
+++ b/blossom/index.html
@@ -14,6 +14,15 @@ a.github{ transition: all .5s ease-out; position: fixed; right: 20px; bottom: 50
 a.github svg{ vertical-align: bottom; }
 a.github:hover{ box-shadow: 3px 6px 5px rgba(0,0,0,0.1); background: #fff; }
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4302615-22"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-4302615-22');
+</script>
 </head>
 <body>
     <canvas id="canvas" resize stats hidpi="on"></canvas>
