--- a/image-distortion-mesh/index.html
+++ b/image-distortion-mesh/index.html
@@ -64,6 +64,16 @@
 		}
 		</script>
 		<script type="text/paperscript" canvas="stage" src="js/triangular.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-4302615-22"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-4302615-22');
+</script>
+
 	</head>
 	<body>
 		<canvas id="stage" resize="true" stats hidpi="on"></canvas>
