--- a/letters/index.html
+++ b/letters/index.html
@@ -9,7 +9,7 @@
 <script type="text/paperscript" src="js/letters.js" canvas="canvas"></script>
 <style>
 html, body{ margin: 0; padding: 0; overflow: hidden; font-family: arial; background: #f9eff0; }
-ul{ position: fixed; left: 30px; top: 30px; font-size: 12px; margin: 0; padding: 0; font-family: "Apercu"; }
+ul{ position: fixed; left: 30px; top: 30px; font-size: 12px; margin: 0; padding: 0; font-family: arial; }
 ul li{ display: block; margin-bottom: 10px; }
 ul li a{ text-decoration: none; }
 ul li a:hover{ text-decoration: line-through; }
